--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,16 +26,28 @@
 
 
 [[constraint]]
-  branch = "master"
-  name = "github.com/golang/glog"
+  name = "github.com/elazarl/go-bindata-assetfs"
+  version = "1.0.0"
 
 [[constraint]]
   name = "github.com/golang/protobuf"
-  version = "1.0.0"
+  version = "1.1.0"
 
 [[constraint]]
   name = "github.com/grpc-ecosystem/grpc-gateway"
   version = "1.3.1"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/philips/go-bindata-assetfs"
+
+[[constraint]]
+  name = "github.com/soheilhy/cmux"
+  version = "0.1.4"
+
+[[constraint]]
+  name = "github.com/spf13/cobra"
+  version = "0.0.2"
 
 [[constraint]]
   branch = "master"
