--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -39,7 +39,19 @@
 
 [[constraint]]
   branch = "master"
+  name = "github.com/juju/loggo"
+
+[[constraint]]
+  branch = "master"
   name = "github.com/philips/go-bindata-assetfs"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/samsung-cnct/cluster-controller"
+
+[[constraint]]
+  name = "github.com/sirupsen/logrus"
+  version = "1.0.5"
 
 [[constraint]]
   name = "github.com/soheilhy/cmux"
@@ -48,6 +60,18 @@
 [[constraint]]
   name = "github.com/spf13/cobra"
   version = "0.0.2"
+
+[[constraint]]
+  name = "github.com/spf13/pflag"
+  version = "1.0.1"
+
+[[constraint]]
+  name = "github.com/spf13/viper"
+  version = "1.0.2"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/venezia/redis-operator"
 
 [[constraint]]
   branch = "master"
@@ -60,6 +84,18 @@
 [[constraint]]
   name = "google.golang.org/grpc"
   version = "1.11.3"
+
+[[constraint]]
+  branch = "master"
+  name = "k8s.io/apiextensions-apiserver"
+
+[[constraint]]
+  name = "k8s.io/apimachinery"
+  version = "kubernetes-1.10.0"
+
+[[constraint]]
+  name = "k8s.io/client-go"
+  version = "7.0.0"
 
 [prune]
   go-tests = true
