--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -79,6 +79,10 @@
 
 [[constraint]]
   branch = "master"
+  name = "k8s.io/api"
+
+[[constraint]]
+  branch = "master"
   name = "k8s.io/apiextensions-apiserver"
 
 [[constraint]]
