--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -30,6 +30,10 @@
   version = "1.0.0"
 
 [[constraint]]
+  branch = "master"
+  name = "github.com/golang/glog"
+
+[[constraint]]
   name = "github.com/golang/protobuf"
   version = "1.1.0"
 
