Updating helm deployment

--- a/deployments/helm/cluster-manager-api/templates/deployment.yaml
+++ b/deployments/helm/cluster-manager-api/templates/deployment.yaml
@@ -17,6 +17,7 @@ spec:
         app: {{ template "name" . }}
         release: "{{ .Release.Name }}"
     spec:
+      serviceAccountName: {{ .Release.Name }}-serviceaccount
       containers:
       - name: {{ template "name" . }}
         image: "{{.Values.image.repo}}"
