--- a/deployments/helm/cluster-manager-api/templates/service.yaml
+++ b/deployments/helm/cluster-manager-api/templates/service.yaml
@@ -1,10 +1,11 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ .Release.Name }}-{{ .Chart.Name }}"
+  name: {{ template "fullname" . }}
   labels:
     app: {{ template "fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ template "chartname" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
