Created makefile, adjusted dockerfile to use makefile, added version endpoint, added cobra integration

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -54,6 +54,10 @@
   version = "0.1.4"
 
 [[constraint]]
+  name = "github.com/spf13/cobra"
+  version = "0.0.3"
+
+[[constraint]]
   name = "github.com/spf13/pflag"
   version = "1.0.1"
 
