--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -46,20 +46,12 @@
   name = "github.com/philips/go-bindata-assetfs"
 
 [[constraint]]
-  branch = "master"
-  name = "github.com/samsung-cnct/cma-operator"
-
-[[constraint]]
   name = "github.com/soheilhy/cmux"
   version = "0.1.4"
 
 [[constraint]]
   name = "github.com/spf13/cobra"
   version = "0.0.3"
-
-[[constraint]]
-  name = "github.com/spf13/pflag"
-  version = "1.0.1"
 
 [[constraint]]
   name = "github.com/spf13/viper"
@@ -75,12 +67,27 @@
 
 [[constraint]]
   name = "google.golang.org/grpc"
-  version = "1.12.0"
+  version = "1.14.0"
+
+[[constraint]]
+  name = "gopkg.in/yaml.v2"
+  version = "2.2.1"
+
+[[constraint]]
+  branch = "master"
+  name = "k8s.io/api"
+
+[[constraint]]
+  branch = "master"
+  name = "k8s.io/apimachinery"
 
 [[constraint]]
   name = "k8s.io/client-go"
-  version = "7.0.0"
+  #version = "7.0.0"
+  branch = "master"
 
 [prune]
   go-tests = true
   unused-packages = true
+
+
