--- a/deployments/helm/cluster-manager-api/values.yaml
+++ b/deployments/helm/cluster-manager-api/values.yaml
@@ -3,7 +3,7 @@
 # Declare name/value pairs to be passed into your templates.
 # name: value
 
-name: cluster-manager-api 
+name: cluster-manager-api
 image:
   repo: quay.io/samsung_cnct/cluster-manager-api:prod
 
@@ -11,3 +11,11 @@ port: 80
 service:
   port: 80
   type: LoadBalancer
+
+helpers:
+#  azure:
+#    endpoint: cma-aks-grpc.cnct.io:443
+#    insecure: false
+#  aws:
+#    endpoint: cma-aws-grpc.cnct.io:443
+#    insecure: false
