--- a/deployments/helm/cluster-manager-api/values.yaml
+++ b/deployments/helm/cluster-manager-api/values.yaml
@@ -3,7 +3,7 @@
 # Declare name/value pairs to be passed into your templates.
 # name: value
 
-name: cluster-manager-api 
+name: cluster-manager-api
 image:
   repo: quay.io/samsung_cnct/cluster-manager-api:prod
 
@@ -12,3 +12,13 @@ service:
   port: 80
   type: LoadBalancer
   nodePort:
+
+helpers:
+  aks:
+    enabled: false
+    endpoint: cma-aks-grpc.cnct.io:443
+    insecure: false
+  aws:
+    enabled: false
+    endpoint: cma-aws-grpc.cnct.io:443
+    insecure: false
