ran into https://github.com/golang/dep/issues/1799

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -90,8 +90,10 @@
   branch = "master"
   name = "github.com/samsung-cnct/cma-aks"
 
-
-
+[[override]]
+  source = "https://github.com/fsnotify/fsnotify/archive/v1.4.7.tar.gz"
+  name = "gopkg.in/fsnotify.v1"
+  
 [prune]
   go-tests = true
   unused-packages = true
