--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,8 @@
 stages:
  - build
- - test
 
 test:branch:
-  stage: test
+  stage: build
   image: golang:1.11.0-alpine
   before_script:
     - apk update && apk add git make
