changes to gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
 stages:
  - build
+ - test
 
 test:branch:
-  stage: build
+  stage: test
   image: golang:1.11.0-alpine
   before_script:
     - apk update && apk add git make
