add ingress and certificates to helm chart (#48)
* add ingress and certificates to helm chart

* add grpc ingress and certificate

--- a/deployments/helm/cluster-manager-api/templates/service.yaml
+++ b/deployments/helm/cluster-manager-api/templates/service.yaml
@@ -11,13 +11,8 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-  - name: registry
+  - name: http
     port: {{ .Values.service.port | int }}
     targetPort: {{ .Values.port | int }}
-    {{- if eq .Values.service.type "NodePort" }}
-    {{- if .Values.service.nodePort }}
-    nodePort: {{ .Values.service.nodePort }}
-    {{- end }}
-    {{- end }}
   selector:
     app: {{ template "fullname" . }}
