Adding helm chart variables for vmware

--- a/deployments/helm/cluster-manager-api/values.yaml
+++ b/deployments/helm/cluster-manager-api/values.yaml
@@ -22,3 +22,7 @@ helpers:
     enabled: false
     endpoint: cma-aws-grpc.cnct.io:443
     insecure: false
+  vmware:
+    enabled: false
+    endpoint: cma-vmware-grpc.cnct.io:443
+    insecure: false
