--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -70,17 +70,17 @@
   version = "1.14.0"
 
 [[constraint]]
-  branch = "master"
-  name = "k8s.io/api"
+  version = "kubernetes-1.11.3"
+#  branch = "master"
+  name = "k8s.io/apiextensions-apiserver"
 
 [[constraint]]
-  branch = "master"
   name = "k8s.io/apimachinery"
+  version = "kubernetes-1.11.3"
 
 [[constraint]]
   name = "k8s.io/client-go"
-  #version = "7.0.0"
-  branch = "master"
+  version = "v8.0.0"
 
 [[constraint]]
   branch = "master"
