update cma-ssh value to align with the default (#74)

--- a/deployments/helm/cluster-manager-api/values.yaml
+++ b/deployments/helm/cluster-manager-api/values.yaml
@@ -41,5 +41,5 @@ helpers:
       insecure: true
    ssh:
       enabled: false
-      endpoint: cma-ssh-cma-ssh:80
+      endpoint: cma-ssh:80
       insecure: true
